--- a/src/stories/Acessibility.stories.mdx
+++ b/src/stories/Acessibility.stories.mdx
@@ -43,12 +43,10 @@ This Includes:
 <div className="subheading">Usable for Everyone</div>
 
 We value our Customers - Partners - Employees & the Music community. 
-<br/>
+
 It is important to us, that our Products are accessible to these groups of people.
 That also means we need to pay special attention to members of these communities
 who have disabilities. 
-
-<br/>
 
 Disabilities impact how the ability of people to;
 <ol>
@@ -61,127 +59,73 @@ Disabilities impact how the ability of people to;
 
 Therefore it is very important for us to consider how design and development of our products can support a wide range of experiences.
 
+<div className="subheading">Assistive Technology Support</div>
 
-<div className="subheading">Expertise - Remember every Journey is different</div>
+The components in this design system are tested for accessibility. Employees & Customers should expect to be able to access features built with our components using assistive technologies.
 
-Create content that will help our users enjoy their musical instruments for a lifetime.
+For example:
+<ol>
+  <li>Screen Readers</li>
+  <li>Alternative Keyboards</li>
+  <li>Switch Devices</li>
+  <li>Tools for Readability</li>
+</ol>
+
+<div className="subheading">General Considerations</div>
+
+Baseline of tips that are useful for all builders of web based experiences
+
+<b>Alternative text for Media Content</b>
+
+<ol>
+  <li>Provide captions and transcripts for video content</li>
+  <li>Provide Alternatives and/or descriptions of complex visualisations</li>
+  <li>Provide Alternative text for images that convey information</li>
+</ol>
+
+<b>Other Considerations</b>
+
+<ol>
+  <li>Make sure text & contrast values are sufficient</li>
+  <li>Remove potentially insensitive or non-inclusive language (Pronouns)</li>
+  <li>Do not change behaviour or context unexpectedly</li>
+</ol>
+
+<div className="subheading">Considerations for Product Designers</div>
+
+Baseline of tips that are useful for all builders of web based experiences
+
+<b>Elements & Composition</b>
+
+<ol>
+  <li>Give all elements permanently visible labels</li>
+  <li>Break up long forms into smaller sections/screens</li>
+  <li>Use clear error text & identify disabled fields</li>
+</ol>
+
+<b>Typography</b>
 
 <ul>
-  <li>Explain in simple terms </li>
-  <li>Tailor your knowledge to the user</li>
-  <li>Appreciate the discovery process</li>
+  <li>GUse Legible Fonts - do not use thin font faces</li>
+  <li>Underline Links</li>
+  <li>Clearly describe the purpose of a link: “ read more about accessibility”</li>
 </ul>
 
-<div className="subheading">Rock & Roll - Connect users with our Spirit</div>
+<div className="subheading">Considerations for UX and Front-End Engineers</div>
 
-Rock & Roll is a spirit, keep in mind that we are coming together to celebrate Rock & Roll. 
-Speak to include anyone in this spirit.
+Baseline of tips that are useful for all builders of web based experiences
 
-<ul>
-  <li>Be welcoming when introducing a new user</li>
-  <li>Rock & Roll welcomes Diversity</li>
-  <li>Stay true to Rock & roll</li>
-</ul>
+<b>Responsive Design</b>
 
-<div className="subheading">Supporting - Building instruments for Humans</div>
+<ol>
+  <li>Provide large touch targets for interactive elements</li>
+  <li>Ensure consistent content across devices</li>
+</ol>
 
-Building and receiving an instrument is a big deal.
-Celebrate the Emotion involved.
+<b>Assistive Technology</b>
 
 <ul>
-  <li>Its exciting to receive a new instrument</li>
-  <li>Show consideration to Customers</li>
-  <li>Show understanding of the emotion involved</li>
-</ul>
-
-<hr />
-
-<div className="subheading">Tonal Attributes</div>
-
-Tone is used to accustom ourselves to different user’s and there situations. 
-
-We want our users to feel
-<ul>
-  <li>Guided</li>
-  <li>At ease</li>
-  <li>Trust</li>
-  <li>Confident</li>
-</ul>
-
-To do that we use the following Tonal Attributes
-
-<ul>
-  <li>Knowledgeable</li>
-  <li>Assuring</li>
-  <li>Exciting</li>
-  <li>Dedicated</li>
-</ul>
-
-<div className="subheading">Tonal Qualities</div>
-
-<b>Knowledgeable</b>
-
-You are focused on the users interest,
-gently assisting with making decisions that require experience.
-
-<ul>
-  <li>Be engaging & inquisitive</li>
-  <li>Be friendly & guiding</li>
-</ul>
-
-Guiding someone who has a specific Idea can be annoying,
-in this case less is more.
-
-<ul>
-  <li>Don’t be condescending </li>
-  <li>Don’t saturate content with jargon and detail</li>
-</ul>
-
-<b>Promising</b>
-
-Helping users to arrive at a decision, requires time & trust.
-Take the time to help the user make a decision.
-
-<ul>
-  <li>Do be helpful & Encouraging</li>
-  <li>Use words like “we”, “let’s” </li>
-</ul>
-
-Be realistic and manage user expectations
-
-<ul>
-  <li>Don’t be passive (making the user tell you what they need)</li>
-  <li>Don’t use language that is over-familiar to convey a false sense of warmth </li>
-</ul>
-
-<b>Exciting</b>
-
-We make musicians, it is an exciting process to discover and learn.
-
-<ul>
-  <li>Do celebrate success of our musicians</li>
-  <li>Do enjoy each step</li>
-</ul>
-
-Avoid “hyping” every step of the journey
-
-<ul>
-  <li>Don’t make the entire process a dopamine ride</li>
-  <li>Don’t use phrases like “wow!” “thats exciting!!!!!!”</li>
-</ul>
-
-<b>Dedicated</b>
-
-We take one step at a time, progress over perfection
-
-<ul>
-  <li>Do show interest in achieving the users goal</li>
-  <li>Do show understanding for the users motivation</li>
-</ul>
-
-Dont force the user to complete the journey
-
-<ul>
-  <li>Don’t make it about the end of the user journey</li>
-  <li>Don’t use language that feels forceful</li>
+  <li>Use screen reader and keyboard-accessible HTML</li>
+  <li>Keyboard focus needs to be logical in regards to visual layout</li>
+  <li>Do not change standard interaction behaviours e.g. Scroll</li>
 </ul>
