--- a/src/stories/ContentGuidelines.stories.mdx
+++ b/src/stories/ContentGuidelines.stories.mdx
@@ -37,3 +37,37 @@ The tone is appropriate for the scenario
   <li>A stressful scenario is managed with consideration and a knowledgeable tone</li>
   <li>The content sounds like a Rock & Roll Grandad that knows what key you play without ever having heard you play</li>
 </ul>
+
+<div className="subheading">Imagery</div>
+
+<ul>
+  <li>
+  Use imagery that is relevant to what the user is looking for
+    <ul>
+      <li>For example, when a user visits the tune section of our page, show info graphics explaining the tuning process</li>
+      <li>Show video content with thumbnails of real people</li>
+    </ul>
+  </li>
+</ul>
+
+<div className="subheading">Reading</div>
+
+<ul>
+  <li>Use common words, the longer you’r words the more likely the reader is going to skip them. </li>
+  <li>Short sentences, people with some learning disabilities read letter for letter. They cannot fully understand a sentence if it’s too long</li>
+  <li>Minimise the use of Jargon, plain english works best.</li>
+</ul>
+
+<div className="subheading">Know your Audience</div>
+
+<ul>
+  <li>
+  Always keep in mind who you are writing for, a visitor to the beginners section is likely to feel overwhelmed.
+    <ul>
+      <li>Minimise the information overload</li>
+      <li>Use Clear titles</li>
+      <li>Imagery</li>
+    </ul>
+  </li>
+  <li>Aim to answer the most important questions first</li>
+</ul>
